excalidraw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: excalidraw
    meta.helm.sh/release-namespace: opendesk
  labels:
    app.kubernetes.io/instance: excalidraw
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: excalidraw
    helm.sh/chart: excalidraw-1.0.0
  name: excalidraw-excalidraw-ingress
namespace: opendesk
spec:
  ingressClassName: haproxy
  rules:
  - host: excalidraw.opendesk.hrz.uni-marburg.de
    http:
      paths:
      - backend:
          service:
            name: excalidraw-excalidraw
            port:
              number: 80
        path: /
        pathType: Prefix
